# mythic

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  HackDependencies.sol  LICENSE-APACHE  LICENSE-MIT  Makefile  Makefile.toml  README.md  arbiter.toml  book.toml  build.sh  foundry.toml  py_setup.sh  rustc-ice-2024-02-07T21_50_59-409795.txt  rustc-ice-2024-02-07T21_50_59-409796.txt  rustc-ice-2024-02-07T21_51_07-409838.txt  rustc-ice-2024-02-07T21_51_07-409839.txt  rustc-ice-2024-02-07T21_53_42-410600.txt  rustc-ice-2024-02-07T21_53_42-410601.txt  rustc-ice-2024-02-07T21_53_45-410640.txt  rustc-ice-2024-02-07T21_53_45-410641.txt  rustc-ice-2024-02-07T21_53_51-410690.txt  rustc-ice-2024-02-07T21_53_51-410691.txt  rustc-ice-2024-02-07T21_53_59-410733.txt  rustc-ice-2024-02-07T21_53_59-410734.txt
box-core/: Cargo.toml
box-core/src/: lib.rs  math.rs  membrane.rs  primitives.rs
box-simulation/: Cargo.toml  Config.toml
box-simulation/src/: main.rs  params.rs
box-simulation/src/agents/: arbitrageur.rs  atomic_arbitrage.rs  liquidity_provider.rs  mod.rs  price_changer.rs  rebalancer.rs  token_admin.rs  weight_changer.rs
box-simulation/src/agents/arbitrageur/: g3m.rs  mod.rs
box-simulation/src/engine/: builder.rs  mod.rs  price_path.rs
box-simulation/src/settings/: params.rs
box-simulation/src/setup/: deploy.rs  init.rs  mod.rs
box-simulation/src/utils/: constants.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs  reader.rs  unpacker.rs
crates/analysis/src/commands/: mod.rs  plot_heatmap.rs  plot_prices.rs
crates/analysis/src/tests/: mod.rs  rmm_analysis.rs
crates/analysis/src/visualize/: mod.rs
crates/app/: Cargo.toml
crates/app/src/: app.rs  lib.rs  loader.rs  middleware.rs  tracer.rs
crates/app/src/adapters/: dfmm_adapter.rs  mod.rs
crates/app/src/components/: button.rs  chart.rs  containers.rs  input.rs  logos.rs  mod.rs  progress.rs  select.rs  styles.rs  system.rs
crates/app/src/controller/: empty.rs  exit.rs  mod.rs
crates/app/src/logging/: tracer.rs
crates/app/src/middleware/: alloyed.rs  mod.rs  watch.rs
crates/app/src/model/: mod.rs  portfolio.rs  user.rs
crates/app/src/screens/: address_book.rs  developer.rs  empty.rs  exit.rs  experimental.rs  mod.rs  settings.rs  terminal.rs
crates/app/src/user/: coins.rs  mod.rs  portfolios.rs  profile.rs
crates/app/src/view/: address_book.rs  agent.rs  control.rs  execute.rs  mod.rs  monitor.rs  portfolio_view.rs  sidebar.rs
crates/clients/: Cargo.toml  readme.md
crates/clients/src/: dev.rs  lib.rs  scroll.rs
crates/clients/src/arbiter/: mod.rs  world.rs
crates/clients/src/bindings/: dfmm.rs  log_normal.rs  mod.rs  rmm_math_like.rs
crates/clients/src/client/: mod.rs
crates/datatypes/: Cargo.toml
crates/datatypes/src/: lib.rs  units.rs
crates/dfmm/: Cargo.toml
crates/dfmm/src/: agent.rs  engine.rs  lib.rs  position.rs  rmm.rs  scenarios.rs
crates/mythic_charts/: Cargo.toml  README.md
crates/mythic_charts/src/: lib.rs
crates/profiles/: Cargo.toml
crates/profiles/src/: coins.rs  lib.rs  portfolios.rs  profile.rs  system.rs
crates/sim/: Cargo.toml
crates/sim-v2/: Cargo.toml
crates/sim-v2/src/: config.toml  lib.rs
crates/sim/src/: agent.rs  config.rs  configuration.rs  engine.rs  lib.rs  scenarios.rs
simulation/: Cargo.toml
simulation/configs/: constant_gbm_sweep.toml  test.toml
simulation/configs/dynamic_weights/: static_volatilities.toml  static_volatilities_large.toml
simulation/configs/momentum/: static.toml
simulation/configs/rmm_vol/: static.toml
simulation/configs/test/: static.toml  sweep.toml  test.toml
simulation/src/: lib.rs  main.rs  math.rs  settings.rs
simulation/src/agents/: arbitrageur.rs  block_admin.rs  counter.rs  liquidity_provider.rs  mod.rs  momentum_strategist.rs  portfolio_deployer.rs  portfolio_pool_initializer.rs  price_changer.rs  strategy_monitor.rs  swapper.rs  tests.rs  token_admin.rs  volatility_targeting_strategist.rs  weight_changer.rs
simulation/src/bindings/: .gitignore  README.md  atomic_arbitrage.rs  coin.rs  counter.rs  g3m.rs  i_strategy.rs  ig3m.rs  lex.rs  mod.rs  portfolio_tracker.rs  rmm.rs  rmm_atomic_arbitrage.rs  rmm_math_like.rs  sd5_9x_18_math.rs  shared_types.rs
simulation/src/engine/: builder.rs
simulation/src/portfolio_bindings/: assembly_lib.rs  base_64.rs  coin_type.rs  config_like.rs  configuration.rs  erc20_wrapper.rs  fee_on_transfer_token.rs  fixed_point_math_lib.rs  gaussian.rs  ghost.rs  i_strategy.rs  ierc20.rs  invariant.rs  malicious_reentrancy_token.rs  math.rs  mock_erc20.rs  mod.rs  normal_configuration.rs  normal_strategy.rs  normal_strategy_lib.rs  owned.rs  pool_id_lib.rs  portfolio.rs  portfolio_like.rs  portfolio_registry.rs  position_renderer.rs  returns_too_little_token.rs  safe_cast_lib.rs  safe_transfer_lib.rs  setup.rs  shared_types.rs  simple_registry.rs  strings_lib.rs  utility.rs
simulation/src/prb_math_bindings/: common.rs  mod.rs  sd5_9x_18.rs  sd_1x_18.rs  ud6_0x_18.rs  ud_2x_18.rs
simulation/src/settings/: mod.rs  parameters.rs
simulation/src/simulations/: dynamic_weights.rs  errors.rs  mod.rs  momentum.rs  rmm_vol_targeting.rs  stable_portfolio.rs
simulation/src/solstat_bindings/: gaussian.rs  invariant.rs
simulation/src/strategy/: g3m.rs  mod.rs  rmm.rs
simulation/src/tests/: mod.rs
ui/: Cargo.toml  README.md
ui/src/: counter_component.rs  example.rs  lib.rs  mod.rs  vault.rs
ui/src/analyzer/: mod.rs
ui/src/app/: example.rs  mod.rs
ui/src/components/: example.rs  mod.rs
ui/src/example/: components.rs  config_editor.rs  deployer.rs  footer.rs  header.rs  mod.rs  run_sim_button.rs  sidebar.rs  watcher.rs
ui/src/mvp/: app.rs  battletester.rs  digest.rs  execution.rs  loader.rs  local.rs  logos.rs  mod.rs  profile.rs  state.rs  styles.rs  system.rs  terminal.rs  tracer.rs  units.rs  view.rs  world.rs
ui/src/screen/: example.rs  mod.rs  start.rs
ui/src/sdk/: production.rs  vault.rs
ui/src/styles/: background.rs  mod.rs
utils/: Cargo.toml  README.md
utils/src/: lib.rs  membrane.rs  primitives.rs
(+837 files in other folders)
