[workspace]
members = ["crates/*", "documentation"]

[package]
name = "excalibur"
version = "0.2.0"
edition = "2021"
description = "Excalibur: An alternative entrypoint to DeFi."
authors = ["Primitive Bits, Inc."]

[[bin]]
name = "excalibur"
path = "bin/main.rs"

[workspace.dependencies]
# Local
bindings = { path = "./crates/bindings", version = "0.1.0" }
clients = { path = "./crates/clients", version = "0.1.0" }
sim = { path = "./crates/sim", version = "0.1.0" }
datatypes = { path = "./crates/datatypes", version = "0.1.0" }
cfmm_math = { path = "./crates/cfmm_math", version = "0.1.0" }

# External
arbiter-bindings = "0.1.5"
arbiter-core = "0.10.2"
ethers = { version = "=2.0.13", features = ["ws", "openssl", "rustls"] }

# Ethereum
revm = { version = "5.0.0", features = ["ethersdb", "std", "serde"] }
alloy-primitives = { version = "0.6.3", features = ["serde"] }
alloy-sol-types = "0.6.3"
alloy-rlp = "0.3.4"

# Networking
reqwest = "0.11.24"

## Config and parsing
serde = "=1.0.196"
serde_json = "=1.0.113"
serde_with = { version = "3.6.1", features = ["chrono_0_4"] }
config = "0.14.0"

## Async
tokio = { version = "=1.36.0", features = ["macros", "full"] }
async-trait = "=0.1.77"

## Error and logs
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
tracing-futures = { version = "=0.2.5", default-features = false }
anyhow = "=1.0.79"
thiserror = "=1.0.57"

itertools = "0.12.1"
rand = "=0.8.5"
bytesize = "1.3.0"
dotenv = "=0.15.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
clap = { version = "4.5.0", features = ["derive"] }

# Visualization
plotters = "=0.3.5"

# math
RustQuant = { version = "0.0.45", features = ["seedable"] }
statrs = "=0.16.0"
reikna = "=0.12.3"

# Storage
linked-hash-map = "=0.5.6"
directories-next = "=2.0.0"

# Time
chrono = { version = "0.4.34", features = ["serde"] }

[dependencies]
# Local
bindings.workspace = true
clients.workspace = true
cfmm_math.workspace = true
datatypes.workspace = true
sim.workspace = true

arbiter-bindings.workspace = true
arbiter-core.workspace = true

revm.workspace = true
ethers.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rlp.workspace = true

serde.workspace = true
serde_json.workspace = true

reqwest.workspace = true
chrono.workspace = true

tokio.workspace = true
async-trait.workspace = true

reikna.workspace = true
plotters.workspace = true

clap.workspace = true


# Env and logs
directories-next.workspace = true
dotenv.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true

# Math
RustQuant.workspace = true
statrs.workspace = true

iced = { version = "=0.10.0", features = [
    "system",
    "tokio",
    "lazy",
    "image",
    "palette",
    "advanced",
    "canvas",
    "svg",
] }
iced_aw = { version = "=0.7.0", default-features = false, features = [
    "menu",
    "icon_text",
    "icons",
    "spinner",
    "floating_element",
] }
plotters-backend = "=0.3.5"
plotters-iced = "=0.9.0"
iced-loading-indicator = { git = "https://github.com/BB-301/iced-loading-indicator.git", rev = "a09296f" }
url = "=2.5.0"


[dev-dependencies]
# For book
mdbook = "0.4.35"
cargo-make = "0.37.2"
mdbook-katex = "0.5.8"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]

[package.metadata.bundle]
name = "Excalibur"
identifier = "xyz.primitive.excalibur"
short_description = "Excalibur: An alternative entrypoint to DeFi."
long_description = "Excalibur: An alternative entrypoint to DeFi."
resources = ["assets/"]
icon = ["assets/logos/excalibur_logo_2.png"]

# macOS specific
category = "public.app-category.finance"
copyright = "Copyright (c) 2024 Primitive Bits, Inc."
minimum_system_version = "10.14"
osx_url_schemes = ["xyz.primitive.excalibur"]

# Windows specific
product_name = "Excalibur"
manufacturer = "Primitive Bits, Inc."

# Linux specific
package_name = "excalibur"
package_version = "0.1.0"
