[workspace]
members = ["crates/mythic_charts", "crates/mythic_iced"]

[package]
name = "mythic"
version = "0.0.1"
edition = "2021"
description = "Mythic is a native blockchain navigator."
authors = ["Primitive Bits, Inc."]

[[bin]]
name = "mythic"
path = "src/main.rs"

[workspace.dependencies]

mythic_charts = { path = "crates/mythic_charts" }
mythic_iced = { path = "crates/mythic_iced" }

ethers = { version = "=2.0.13", features = ["ws", "openssl", "rustls"] }

# Ethereum
revm = { version = "5.0.0", features = ["ethersdb", "std", "serde"] }

# Networking
reqwest = "0.11.24"

## Config and parsing
serde = "=1.0.203"
serde_json = "=1.0.114"
serde_with = { version = "3.6.1", features = ["chrono_0_4"] }
config = "0.14.0"

## Async
tokio = { version = "=1.36.0", features = ["macros", "full"] }
async-trait = "=0.1.77"

## Error and logs
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
tracing-futures = { version = "=0.2.5", default-features = false }
anyhow = "=1.0.80"
thiserror = "=1.0.61"

itertools = "0.12.1"
rand = "=0.8.5"
bytesize = "1.3.0"
dotenv = "=0.15.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
clap = { version = "4.5.0", features = ["derive"] }

# Visualization
plotters = "=0.3.5"

# math
RustQuant = { version = "0.0.45", features = ["seedable"] }
statrs = "=0.16.0"
reikna = "=0.12.3"

# Storage
linked-hash-map = "=0.5.6"
directories-next = "=2.0.0"

# Time
chrono = { version = "0.4.34", features = ["serde"] }

[dependencies]
mythic_charts.workspace = true
mythic_iced.workspace = true

revm.workspace = true
ethers.workspace = true

serde.workspace = true
serde_json.workspace = true

reqwest.workspace = true
chrono.workspace = true

tokio.workspace = true
async-trait.workspace = true

reikna.workspace = true
plotters.workspace = true

clap.workspace = true


# Env and logs
directories-next.workspace = true
dotenv.workspace = true
uuid.workspace = true
tracing.workspace = true
anyhow.workspace = true
tracing-subscriber.workspace = true

# Math
RustQuant.workspace = true
statrs.workspace = true

iced = { version = "=0.10.0", features = [
    "system",
    "tokio",
    "lazy",
    "image",
    "palette",
    "advanced",
    "canvas",
    "svg",
] }
iced_aw = { version = "=0.7.0", default-features = false, features = [
    "menu",
    "icon_text",
    "icons",
    "spinner",
    "floating_element",
] }
plotters-backend = "=0.3.5"
plotters-iced = "=0.9.0"
iced-loading-indicator = { git = "https://github.com/BB-301/iced-loading-indicator.git", rev = "a09296f" }
url = "=2.5.0"

[package.metadata.bundle]
name = "Mythic"
identifier = "xyz.primitive.mythic"
short_description = "Mythic is a native blockchain navigator."
long_description = "Mythic is a native blockchain navigator."
resources = ["assets/"]
icon = ["assets/logos/excalibur_logo_2.png"]

# macOS specific
category = "public.app-category.utilities"
copyright = "Copyright (c) 2024 Primitive Bits, Inc."
minimum_system_version = "10.14"
osx_url_schemes = ["xyz.primitive.mythic"]

# Windows specific
product_name = "Mythic"
manufacturer = "Primitive Bits, Inc."

# Linux specific
package_name = "mythic"
package_version = "0.1.0"
