[package]
name = "box-core"
version = "0.1.0"
edition = "2021"

[[library]]
name = "box_core"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
auto_impl = "1.1.0"
ethers = "2.0.8"
tokio = { version = "1.28.1", features = ["macros", "full"] }
bindings = { workspace = true }
anyhow = "1.0.75"
