[package]
name = "box-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
arbiter-core = "0.5.1"
ethers = "2.0.10"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = "1.32.0"
