[package]
name = "box-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings.workspace = true
box_core.workspace = true
tokio = { version = "1.11.0", features = ["full"] }
anyhow = "1.0.75"
arbiter-core = { git = "https://github.com/primitivefinance/arbiter.git", branch = "arbiter/version" }
arbiter-derive = { git = "https://github.com/primitivefinance/arbiter.git", branch = "arbiter/version" }
ethers = "2.0.10"
serde = "1.0.188"
serde_json = "1.0.107"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
toml = "0.8.0"
config = "0.13.1"
futures = "0.3.28"
async-trait = "0.1.73"
