[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
ethers.workspace = true
arbiter-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true

unit-conversions = "0.1.13"
itertools = "0.11.0"
rand = "0.8.5"
linked-hash-map = "0.5.6"
RustQuant = { version = "0.0.37", features = ["seedable"] }
