[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
cfmm_math.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
ethers.workspace = true
arbiter-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
RustQuant.workspace = true
tracing-subscriber.workspace = true
statrs.workspace = true
linked-hash-map.workspace = true

unit-conversions = "0.1.13"
itertools = "0.12.0"
rand = "0.8.5"
