[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gui
eyre = "0.6.8"
iced = { version = "0.10.0", features = [
    "system",
    "tokio",
    "lazy",
    "image",
    "palette",
    "advanced",
] }
iced_aw = { version = "0.7.0", default-features = false, features = [
    "menu",
    "icon_text",
    "icons",
    "spinner",
] }
native-dialog = "0.7.0"

image = "0.24.7"
# excalibur deps
analysis.workspace = true
simulation.workspace = true
anyhow.workspace = true
arbiter-core.workspace = true
bytesize.workspace = true
dotenv.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
