[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings.workspace = true
sim.workspace = true
arbiter-bindings.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
ethers.workspace = true
serde.workspace = true
serde_json.workspace = true
plotters.workspace = true
arbiter-core.workspace = true
linked-hash-map.workspace = true
tokio.workspace = true

[dev-dependencies]
tracing-test = "=0.2.4"
