[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates
abi = { path = "../abi" }
datatypes = { path = "../datatypes" }
clients = { path = "../clients" }
cfmm_math = { path = "../cfmm_math" }


# deps
chrono = "0.4.31"
image = "0.24.7"
lazy_static = "1.4.0"
iced = { version = "0.10.0", features = [
    "system",
    "tokio",
    "lazy",
    "image",
    "palette",
    "advanced",
    "canvas",
] }
iced_aw = { version = "0.7.0", default-features = false, features = [
    "menu",
    "icon_text",
    "icons",
    "spinner",
] }
plotters-backend = "0.3.5"
plotters-iced = "0.9.0"

# todo: take this out? its needed in form
revm = { version = "=3.5.0", features = ["ethersdb", "std", "serde"] }
revm-primitives = { version = "1.3.0" }


# workspace crates
sim.workspace = true

# workspace deps
RustQuant.workspace = true
arbiter-bindings.workspace = true
bindings.workspace = true
async-trait.workspace = true
reikna.workspace = true
statrs.workspace = true
alloy-primitives.workspace = true
arbiter-core.workspace = true
anyhow.workspace = true
criterion.workspace = true
ethers.workspace = true
directories-next.workspace = true
plotters.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
alloy-sol-types = "0.5.2"
