[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates
datatypes = { path = "../datatypes" }
clients = { path = "../clients" }
cfmm_math = { path = "../cfmm_math" }


# deps
iced = { version = "=0.10.0", features = [
    "system",
    "tokio",
    "lazy",
    "image",
    "palette",
    "advanced",
    "canvas",
    "svg",
] }
iced_aw = { version = "=0.7.0", default-features = false, features = [
    "menu",
    "icon_text",
    "icons",
    "spinner",
    "floating_element",
] }
plotters-backend = "=0.3.5"
plotters-iced = "=0.9.0"
iced-loading-indicator = { git = "https://github.com/BB-301/iced-loading-indicator.git", rev = "a09296f" }
url = "2.2.2"

# workspace crates
sim.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-providers.workspace = true
alloy-networks.workspace = true
alloy-rpc-client.workspace = true
alloy-rpc-types.workspace = true
alloy-transport-ws.workspace = true
alloy-rlp.workspace = true
alloy-pubsub.workspace = true
alloy-transport-http.workspace = true
alloy-signer.workspace = true
reqwest.workspace = true

# workspace deps
chrono.workspace = true
RustQuant.workspace = true
arbiter-bindings.workspace = true
bindings.workspace = true
async-trait.workspace = true
reikna.workspace = true
statrs.workspace = true
arbiter-core.workspace = true
anyhow.workspace = true
criterion.workspace = true
ethers.workspace = true
directories-next.workspace = true
plotters.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
