[package]
name = "clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datatypes = { path = "../datatypes" }


revm = { version = "=3.5.0", features = ["ethersdb", "std", "serde"] }
revm-primitives = { version = "1.3.0" }
lazy_static = "1.4.0"


simulation.workspace = true


anyhow.workspace = true
arbiter-core.workspace = true
arbiter-bindings.workspace = true
ethers.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
