[package]
name = "clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datatypes = { path = "../datatypes" }


revm = { version = "=3.5.0", features = ["ethersdb", "std", "serde"] }
revm-primitives = { version = "1.3.0" }
lazy_static = "1.4.0"

simulation.workspace = true

# ledger transport api
coins-ledger = { git = "https://github.com/summa-tx/coins.git", branch = "prestwich/more-ledger-refactor" }
coins-bip32 = { git = "https://github.com/summa-tx/coins.git" }
thiserror = "1.0.50"
# alloy ledger api
alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git", branch = "main" }
alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy.git", branch = "dani/signers" }
serial_test = "2.0.0"

anyhow.workspace = true
arbiter-core.workspace = true
arbiter-bindings.workspace = true
ethers.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
ethers-core.workspace = true
alloy-primitives.workspace = true
