[package]
name = "clients"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datatypes = { path = "../datatypes" }

# ledger transport api
coins-ledger = { git = "https://github.com/summa-tx/coins.git", branch = "prestwich/more-ledger-refactor" }
coins-bip32 = { git = "https://github.com/summa-tx/coins.git" }

revm.workspace = true
thiserror.workspace = true
bindings.workspace = true
anyhow.workspace = true
arbiter-core.workspace = true
arbiter-bindings.workspace = true
ethers.workspace = true
dotenv.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
ethers-core.workspace = true
alloy-primitives.workspace = true
