[package]
name = "datatypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { version = "0.5.0", features = ["serde"] }
ethers.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.6.1", features = ["v4", "serde"] }
