[package]
name = "datatypes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives.workspace = true
chrono.workspace = true
ethers.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
tracing.workspace = true
uuid.workspace = true
