[package]
name = "profiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }


anyhow.workspace = true
directories-next.workspace = true
serde.workspace = true
serde_json.workspace = true
